--- a/client/main.css
+++ b/client/main.css
@@ -1,1 +1,10 @@
 /* CSS declarations go here */
+Header a.active {
+  font-weight: bold;
+  text-decoration: underline;
+}
+Header a, #login-buttons a {
+  text-decoration: none;
+  margin-right: 10px;
+  color:inherit;
+}
